# serializer version: 1
# name: TestTeamAPI.test_delete_bulky_postgres_data
  '''
  DELETE
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."team_id" IN (1,
                                                  2,
                                                  3,
                                                  4,
                                                  5 /* ... */)
         AND "posthog_persondistinctid"."id" IN (1,
                                                 2,
                                                 3,
                                                 4,
                                                 5 /* ... */))
  '''
# ---
# name: TestTeamAPI.test_delete_bulky_postgres_data.1
  '''
  DELETE
  FROM "posthog_person"
  WHERE ("posthog_person"."team_id" IN (1,
                                        2,
                                        3,
                                        4,
                                        5 /* ... */)
         AND "posthog_person"."id" IN (1,
                                       2,
                                       3,
                                       4,
                                       5 /* ... */))
  '''
# ---
# name: TestTeamAPI.test_delete_bulky_postgres_data.2
  '''
  DELETE
  FROM "posthog_personlessdistinctid"
  WHERE "posthog_personlessdistinctid"."team_id" IN (1,
                                                     2,
                                                     3,
                                                     4,
                                                     5 /* ... */)
  '''
# ---
# name: TestTeamAPI.test_delete_bulky_postgres_data.3
  '''
  DELETE
  FROM "posthog_personoverride"
  WHERE "posthog_personoverride"."team_id" IN (1,
                                               2,
                                               3,
                                               4,
                                               5 /* ... */)
  '''
# ---
